# MLOps_course_AGH_lab11

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  app.py  export_to_onnx.py  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml  workflow_dispatch.yaml
src/: __init__.py  inference.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_api.py  test_inference.py
