[project]
name = "lab1hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.2",
    "clean-text>=0.6.0",
    "joblib>=1.5.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]

integration = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0,<1.0.0"
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "tokenizers>=0.21.0",
    "transformers>=4.57.0",
    "onnxruntime>=1.19.0",
]

deployment = [
    "onnxruntime>=1.19.0",
    "tokenizers>=0.21.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]

inference = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "onnxruntime>=1.19.0",
    "tokenizers>=0.21.0",
]


